RESOLVED FIXED80351
InlineTextBox is using the wrong origin when calling addRelevantRepaintedObject
https://bugs.webkit.org/show_bug.cgi?id=80351
Summary InlineTextBox is using the wrong origin when calling addRelevantRepaintedObject
Beth Dakin
Reported 2012-03-05 16:51:31 PST
InlineTextBox is using the adjustedPaintOffset when calling addRelevantRepaintedObject, but it should be using the textOrigin. Patch forthcoming.
Attachments
Patch (17.96 KB, patch)
2012-03-06 11:45 PST, Beth Dakin
sam: review+
Beth Dakin
Comment 1 2012-03-06 11:45:33 PST
Beth Dakin
Comment 2 2012-03-06 12:09:26 PST
Note You need to log in before you can comment on or make changes to this bug.