https://bugs.webkit.org/show_bug.cgi?id=80351 InlineTextBox is using the wrong origin when calling addRelevantRepaintedObject -and corresponding- <rdar://problem/10970221>

Reviewed by Sam Weinig.

Source/WebCore:

boxOrigin represents the actual location of the text. The adjustedPaintOffset
(which I was using previously) will only correspond to the first line in a
block of lines.
* rendering/InlineTextBox.cpp:
(WebCore::InlineTextBox::paint):

Tools:

This test has actually been broken since revision 109273. This change makes
the test pass again, and it makes it specifically exercise the fix for this
bug.
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayout.cpp:
(TestWebKitAPI::TEST):

Adjust comments in the other tests to reflect the API changes from 109273.
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayoutFails.cpp:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayoutFails_Bundle.cpp:
(TestWebKitAPI::NewFirstVisuallyNonEmptyLayoutFailsTest::didCreatePage):
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayoutFrames_Bundle.cpp:
(TestWebKitAPI::NewFirstVisuallyNonEmptyLayoutFramesTest::didCreatePage):
* TestWebKitAPI/Tests/WebKit2/NewFirstVisuallyNonEmptyLayout_Bundle.cpp:
(TestWebKitAPI::NewFirstVisuallyNonEmptyLayoutTest::didCreatePage):
* TestWebKitAPI/Tests/WebKit2/lots-of-text.html: Added.



Canonical link: https://commits.webkit.org/97577@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109944 268f45cc-cd09-0410-ab3c-d52691b4dbfc